--- a/index.html
+++ b/index.html
@@ -8,15 +8,27 @@
         <link rel="stylesheet" href="./styles/style.css" />
        
 
-        <title>Cool Web</title>
+        <title>About Me</title>
     </head>
 
     <body>
         <header>
-            <h1>Cool Web Project</h1>
+            <h1>All About Me</h1>
         </header>
 
-        <main></main>
+        <main>
+            <section>
+                <h1>Hi, I'm Morgan</h1>
+                <p>
+                    I use he/him pronouns.
+                    I live in Portland, OR
+                </p>
+            </section>
+            <section>
+                <img id="dog" src="https://upload.wikimedia.org/wikipedia/commons/9/99/Brooks_Chase_Ranger_of_Jolly_Dogs_Jack_Russell.jpg">
+                <button id="button">My favorite animal is...</button>
+            </section>
+        </main>
 
         <footer>&copy; 2021 Aspiring Software Developer</footer>
 
