grab DOM elements and add hidden div around img

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 </p>
             </section>
             <section>
+                <div class="hidden">
                 <img id="dog" src="https://upload.wikimedia.org/wikipedia/commons/9/99/Brooks_Chase_Ranger_of_Jolly_Dogs_Jack_Russell.jpg">
+                </div>
                 <button id="button">My favorite animal is...</button>
             </section>
         </main>
