add text info to hidden dog img

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <section>
                 <div id="dogDiv" class="hidden">
                 <img id="dog" src="https://upload.wikimedia.org/wikipedia/commons/9/99/Brooks_Chase_Ranger_of_Jolly_Dogs_Jack_Russell.jpg">
+                <p>Man's best friend... the dog! Four legs, a tail, and lots of love.</p>
                 </div>
                 <button id="button">My favorite animal is...</button>
             </section>
