edit city/state and footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h1>Hi, I'm Morgan</h1>
                 <p>
                     I use he/him pronouns.
-                    I live in Portland, OR
+                    I live in Vancouver, WA
                 </p>
             </section>
             <section>
@@ -33,7 +33,7 @@
             </section>
         </main>
 
-        <footer>&copy; 2021 Aspiring Software Developer</footer>
+        <footer>&copy; 2021 Morgan the Software Developer</footer>
 
         <script type="module" src="./app.js"></script>
     </body>
