Flip word solution

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     I use he/him pronouns.
                     I live in Vancouver, WA
                 </p>
+                <button id="do-stuff">Do stuff</button>
             </section>
             <section>
                 <div id="dogDiv" class="hidden">
@@ -35,6 +36,6 @@
 
         <footer>&copy; 2021 Morgan the Software Developer</footer>
 
-        <script type="module" src="./app.js"></script>
+        <script type="module" src="./flip.js"></script>
     </body>
 </html>
