--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
 
         <footer>&copy; 2021 Morgan the Software Developer</footer>
 
-        <script type="module" src="./flip.js"></script>
+        <script type="module" src="./duplicateEncode.js"></script>
     </body>
 </html>
